small edit to version guide

--- a/config
+++ b/config
@@ -7,49 +7,49 @@ web {
     locations:
         # website locations
         "/www/content/web/*",
-        "/www/content/akeno/web/*",
-        "/www/proj/glitter/demo/",
-        "/www/content/shared/wss/web/*"
+        # "/www/content/akeno/web/*",
+        # "/www/proj/glitter/demo/",
+        # "/www/content/shared/wss/web/*"
     ;
 }
 
-plugins {
-    # Add or remove plugins
+# plugins {
+#     # Add or remove plugins
 
-    guardian: {
-        captcha: auth.lstv.space;
-    };
+#     guardian: {
+#         captcha: auth.lstv.space;
+#     };
 
-    http: {
-        proxy: nginx;
-        port: 7007;
-    }
+#     http: {
+#         proxy: nginx;
+#         port: 7007;
+#     }
 
-    web: {
-        parser; # Parse special Akeno syntax
-        code-compression; # Auto compress HTML, CSS, and JS
-        cache-management; # Automatically set cahce and update based on file mtime
+#     web: {
+#         parser; # Parse special Akeno syntax
+#         code-compression; # Auto compress HTML, CSS, and JS
+#         cache-management; # Automatically set cahce and update based on file mtime
 
-        # Default config for all webservers
-        defaults: {
-            server {
-                allow-backend; # Allow the api option - allows to configure custom API endpoints
-            }
-        }
-    };
+#         # Default config for all webservers
+#         defaults: {
+#             server {
+#                 allow-backend; # Allow the api option - allows to configure custom API endpoints
+#             }
+#         }
+#     };
 
-    cdn: {
-        files;
-        ls;
-    };
+#     cdn: {
+#         files;
+#         ls;
+#     };
 
-    api;
-    cli;
-    intersocket;
-}
+#     api;
+#     cli;
+#     intersocket;
+# }
 
-environment {
-    git: {
-        managed;
-    }
-}
+# environment {
+#     git: {
+#         managed;
+#     }
+# }
