--- a/config
+++ b/config
@@ -7,9 +7,9 @@ web {
     locations:
         # website locations
         "/www/content/web/*",
-        # "/www/content/akeno/web/*",
-        # "/www/proj/glitter/demo/",
-        # "/www/content/shared/wss/web/*"
+        "/www/content/akeno/web/*",
+        "/www/proj/glitter/demo/",
+        "/www/content/shared/wss/web/*"
     ;
 }
 
