changes, removed irrelevant old stuff

--- a/.gitignore
+++ b/.gitignore
@@ -22,11 +22,9 @@ version/v1.js
 version/v1.js.save
 version/v1.old.js
 
-/addons/nsfw-detector/
-addons/data/arisen/failed.log
-addons/arisen.js
-addons/currency.js
-addons/remoteSync.js
+addons/*
+!addons/cdn.js
+
 model.nlp
 config
 
