--- a/core/gui/app.conf
+++ b/core/gui/app.conf
@@ -1,13 +1,15 @@
-
-
 app {
-    name: "Akeno CLI";
+    name: "Akeno Frontend";
 }
 
 server {
-    domains: 0.0.0.0, akeno.dashboard;
+    port: 1010;
 }
 
-# import("$root/config") {
-#     blocks: gui.server as server;
-# }
+api ("akeno-gui", "backend.js");
+
+handle (/api/**) {
+    as: "api.extragon.cloud";
+    path: "/v2/akeno-gui/";
+    appendPath;
+}
