--- a/examples/hello-world-website/app.conf
+++ b/examples/hello-world-website/app.conf
@@ -1,5 +1,6 @@
 
 server {
     # Add domains you want this site to apply to!
-    domains: localhost;
+    domains: localhost, 109.71.252.170;
+    port: 12345;
 }
