fixes to examples

--- a/examples/hello-world-website/app.conf
+++ b/examples/hello-world-website/app.conf
@@ -1,6 +1,5 @@
-
 server {
     # Add domains you want this site to apply to!
-    domains: localhost, 109.71.252.170;
+    domains: localhost;
     port: 12345;
 }
