--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "core/native/external/xxHash"]
 	path = core/native/external/xxHash
 	url = https://github.com/Cyan4973/xxHash
+[submodule "core/ipc"]
+	path = core/ipc
+	url = https://github.com/the-lstv/advanced-node-ipc
