--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "bcrypt": "^6.0.0",
     "clean-css": "^5.3.3",
     "fast-json-stringify": "^6.0.1",
-    "fs-extra": "^11.3.0",
+    "fs-extra": "^11.3.1",
     "jsonwebtoken": "^9.0.2",
+    "lmdb": "^3.4.2",
     "minimist": "^1.2.8",
     "module-alias": "^2.2.3",
     "node-lmdb": "^0.10.1",
