--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@node-rs/xxhash": "^1.7.6",
     "bcrypt": "^6.0.0",
     "clean-css": "^5.3.3",
+    "esbuild": "^0.27.0",
     "fast-json-stringify": "^6.0.1",
     "fs-extra": "^11.3.1",
     "jsonwebtoken": "^9.0.2",
