--- a/package.json
+++ b/package.json
@@ -17,18 +17,18 @@
     "@node-rs/xxhash": "^1.7.6",
     "bcrypt": "^6.0.0",
     "clean-css": "^5.3.3",
-    "esbuild": "^0.27.0",
-    "fast-json-stringify": "^6.0.1",
-    "fs-extra": "^11.3.1",
-    "jsonwebtoken": "^9.0.2",
-    "lmdb": "^3.4.2",
+    "esbuild": "^0.27.2",
+    "fast-json-stringify": "^6.1.1",
+    "fs-extra": "^11.3.3",
+    "jsonwebtoken": "^9.0.3",
+    "lmdb": "^3.4.4",
     "minimist": "^1.2.8",
     "module-alias": "^2.2.3",
     "node-addon-api": "^8.5.0",
     "node-lmdb": "^0.10.1",
-    "pm2": "^6.0.8",
+    "pm2": "^6.0.14",
+    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.56.0",
     "uglify-js": "^3.19.3",
-    "uuid": "^11.1.0",
-    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.56.0"
+    "uuid": "^11.1.0"
   }
 }
